Revision history for {{ $dist->name }}

{{ $NEXT }}
  - removed use of deprecated functions from Class::MOP

1.003020   2013-07-08
  - shebang fixed in re.pl so it is rewritten to point to the proper perl at
    install time (RT#70928)

1.003019   2013-06-27
  - Fix "No arguments!" error in Plugin::DDS when nothing to dump (RT#71205,
    Ash Berlin)
  - fix failing test when Lexical::Persistence is not installed

1.003018   2013-05-19
  - more attempts to fix Term::ReadLine issues in tests (RT#84246, mephinet)

1.003017   2013-04-03
  - fix issues with Term::ReadLine:Perl in tests (RT#84246) (thanks,
    Christopher McCann!)

1.003016   2013-03-26
  - make all plugins load again by using native traits (thanks, Zaki Mughal!)
    (RT#84011)

1.003015   2013-03-01
  - fix "Attempt to use reference as lvalue in substr" warning on perl 5.16
    (thanks, ilmari!)
  - plugins that are used by the default profile now default to being
    installed, fixing RT#83669 and RT#83677

1.003014   2012-10-31
  - now using native Moose attribute traits, instead of the deprecated
    MooseX::AttributeHelper (thanks, Justin Hunter!)
  - now using namespace::autoclean rather than namespace::clean (thanks, Karen
    Etheridge!)

1.003013   2012-05-19
  - Make Sys::SigAction optional dependency for Win32 systems
  - Apply some plugin related patchs from Caleb Cushing

1.003012   2010-09-27
  - Remove some old code to avoid a future Moose warning

1.003011   2010-06-15
  - History plugin now works for Term::ReadLine::Perl
  - Add ReadLine file completion if no other matches, fixes rt.cpan#58351
  - Add a bit more description of Turtle plugin to its POD
  - Fix rt.cpan#43151 where _-> completion had error
  - Add some missing functionality to t/load_core.t test coverage
  - Added docs on quoting and history expansion addressing rt.cpan#48459

1.003010   2010-05-23
  - Add exit_repl attribute as a non-signal related way to indicate the REPL should stop running.

1.3.9_02   Unknown